--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@ Christopher Anderson ePortfolio
 <br>
 <div ><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
 <br>
+<a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
 <br>
-<a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a></div>
+<br>
+<a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
+<br>
+<a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
+<br><br><br></div>
 
 <!--Test button to open popup window populated by artifact orig/updated code ..? -->
 <button onclick="openPopup()"> Test open popup </button>
