--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<H1>Christopher Anderson ePortfolio</H1>
+<p style="text-align:center;"><H1>Christopher Anderson ePortfolio</H1></p>
 <br>
 <br>
 <div ><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
