--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
-<p style="text-align:center;"><H1>Christopher Anderson ePortfolio</H1></p>
-<br>
-<br>
-<div ><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
-<br>
-<a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
-<br>
-<br>
-<a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
-<br>
-<a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
-<br><br><br></div>
+<html>
+<head>
+<style>
+  headerDiv{
+    border: 5px outset;
+    background-color: lightblue;
+    text-align: center;
+  }
+</style>
+</head>
+
+<body>
+<div class= "headerDiv">
+  <H1>Christopher Anderson ePortfolio</H1>
+  <br><br>
+  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
+  <br>
+  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
+  <br><br>
+  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
+  <br>
+  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
+  <br><br><br>
+</div>
+</body>
+</html>
 
 <!--Test button to open popup window populated by artifact orig/updated code ..? -->
 <button onclick="openPopup()"> Test open popup </button>
