--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
 <style>
   headerDiv{
-    border: 5px outset;
     background-color: lightblue;
     text-align: center;
+    height: 400px;
+    width: 800px;
   }
 </style>
 </head>
