--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
+<title>Christopher Anderson's ePortfolio</title>
 <style>
   headerDiv{
-    background-color: lightblue;
+    background-color: #ADD8E6;
     text-align: center;
     height: 400px;
     width: 800px;
