--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Christopher Anderson's ePortfolio</title>
 <style>
-  headerDiv{
+  .headerDiv{
     background-color: #ADD8E6;
     text-align: center;
     height: 400px;
@@ -14,7 +14,7 @@
 <body>
 <div class= "headerDiv">
   <H1>Christopher Anderson ePortfolio</H1>
-  <br><br>
+  <br>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
   <br>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
