--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   .headerDiv{
     background-color: #ADD8E6;
     text-align: center;
-    height: 2400px;
+    height: 400px;
+    width: 1200px;
+  }
+  .bodyDiv{
+    background-color: #E1AD01;
+    text-align: left;
+    height: 1600px;
     width: 1200px;
   }
 </style>
@@ -15,6 +21,8 @@
 <div class= "headerDiv">
   <H1>Christopher Anderson ePortfolio</H1>
   <br>
+</div>
+<div class= "bodyDiv">
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
   <br>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
