--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <title>Christopher Anderson's ePortfolio</title>
 <style>
   .headerDiv{
+    display: flex
     background-color: #ADD8E6;
     text-align: center;
     height: 100px;
-    width: 1200px;
+    width: 100%;
   }
   .bodyDiv{
     background-color: #E1AD01;
