--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Christopher Anderson's ePortfolio</title>
 <style>
   .headerDiv{
-    display: flex
+    display: flex;
     background-color: #ADD8E6;
     text-align: center;
     height: 100px;
