--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   .headerDiv{
     display: flex;
     background-color: #ADD8E6;
-    text-align: center;
+    align-items: center;
     height: 100px;
     width: 100%;
   }
