--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     width: 100%;
   }
   .bodyDiv{
-    background-color: #E1AD01;
+    display:flex;
+    background-color: #FFD700;
     text-align: left;
     height: 1600px;
-    width: 1200px;
+    width: 100%;
   }
 </style>
 </head>
