--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class= "headerDiv">
   <br>
-  <H1>Christopher Anderson ePortfolio</H1>
+  <H1 style="text-align: center;">Christopher Anderson ePortfolio</H1>
 </div>
 <div class= "bodyDiv">
   <br>
