--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class= "bodyDiv">
   <br>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
-  <br>
+  <br><span style="white-space: pre-line">@Model.CommentText</span>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
   <br><br>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
