--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
   <H1 style="text-align: center;">       Christopher Anderson ePortfolio</H1>
 </div>
 <div class= "bodyDiv">
-  <br>
+  <p><br>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
-  <br><span style="white-space: pre-line">@Model.CommentText</span>
-  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
-  <br><br>
-  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
   <br>
-  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
-  <br><br><br>
+  </p>
+  <p><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
+  <br><br></p>
+  <p><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
+  <br></p>
+  <p><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
+  <br><br><br></p>
 </div>
 </body>
 </html>
