--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
   .headerDiv{
     display: flex;
-    background-color: #ADD8E6;
+    background-color: #A3CCC9;
     align-items: center;
     height: 100px;
     width: 100%;
@@ -28,12 +28,11 @@
   <p><br>
   <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
   <br>
-  </p>
-  <p><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
-  <br><br></p>
-  <p><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
-  <br></p>
-  <p><a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
+  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
+  <br><br>
+  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
+  <br>
+  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
   <br><br><br></p>
 </div>
 </body>
