--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     display: flex;
     background-color: #A3CCC9;
     align-items: center;
+    margin: auto;
     height: 100px;
     width: 100%;
   }
@@ -22,7 +23,7 @@
 <body>
 <div class= "headerDiv">
   <br>
-  <H1>&nbsp;&nbsp;Christopher Anderson ePortfolio</H1>
+  <H1>Christopher Anderson ePortfolio</H1>
 </div>
 <div class= "bodyDiv">
   <p><br>
