--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     display: flex;
     background-color: #A3CCC9;
     align-items: center;
-    margin: auto;
+    padding: 30px;;
     height: 100px;
     width: 100%;
   }
