--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     display: flex;
     background-color: #A3CCC9;
     align-items: center;
-    padding: 30px;;
+    padding: 40px;;
     height: 100px;
     width: 100%;
   }
@@ -14,6 +14,7 @@
     display:flex;
     background-color: #FFD700;
     text-align: left;
+    padding: 10px;
     height: 1600px;
     width: 100%;
   }
@@ -22,7 +23,6 @@
 
 <body>
 <div class= "headerDiv">
-  <br>
   <H1>Christopher Anderson ePortfolio</H1>
 </div>
 <div class= "bodyDiv">
