--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
     height: 1600px;
     width: 100%;
   }
+  .headerTxtDiv{
+    background-color: #A3CCC9;
+    text-align: center;
+    padding: 20px;;
+    height: 80px;
+    width: 1000px;
+  }
 </style>
 </head>
 
 <body>
 <div class= "headerDiv">
-  <H1>Christopher Anderson ePortfolio</H1>
+  <div class= "headerTxtDiv">
+      <H1>Christopher Anderson ePortfolio</H1>
+  </div>
 </div>
 <div class= "bodyDiv">
   <p><br>
