--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     height: 80px;
     width: 1500px;
   }
+  .bodyTxtDiv{
+    background-color: #FFD700;
+    text-align: left;
+    padding: 30px;
+    height: 1200px;
+    width: 1600px;
+  }
 </style>
 </head>
 
@@ -35,15 +42,17 @@
   </div>
 </div>
 <div class= "bodyDiv">
-  <p><br>
-  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
-  <br>
-  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
-  <br><br>
-  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
-  <br>
-  <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
-  <br><br><br></p>
+  <div class= "bodyTxtDiv">
+    <p><br>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
+    <br>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
+    <br><br>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
+    <br>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
+    <br><br><br></p>
+  </div>
 </div>
 </body>
 </html>
