--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
   .headerDiv{
     display: flex;
-    background-color: #A3CCC9;
+    background-color: #72c4d4;
     align-items: center;
     padding: 20px;;
     height: 90px;
@@ -12,21 +12,21 @@
   }
   .bodyDiv{
     display:flex;
-    background-color: #FFD700;
+    background-color: #FAFAD2;
     text-align: left;
     padding: 10px;
     height: 1600px;
     width: 100%;
   }
   .headerTxtDiv{
-    background-color: #A3CCC9;
+    background-color: #72c4d4;
     text-align: center;
     padding: 20px;;
     height: 70px;
     width: 1500px;
   }
   .bodyTxtDiv{
-    background-color: #FFD700;
+    background-color: #FAFAD2;
     text-align: left;
     padding: 30px;
     height: 1200px;
