--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     display: flex;
     background-color: #72c4d4;
     align-items: center;
+    justify-content: center;
     padding: 20px;;
     height: 90px;
     width: 100%;
