--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     height: 1600px;
     width: 100%;
   }
+  .dividerDiv{
+    background-color: 008080;
+    height: 25px;
+    display: flex;
+  }
   .headerTxtDiv{
     background-color: #72c4d4;
     text-align: center;
@@ -42,16 +47,21 @@
       <H1>Christopher Anderson ePortfolio</H1>
   </div>
 </div>
+<div class="dividerDiv">
+  
+</div>
 <div class= "bodyDiv">
   <div class= "bodyTxtDiv">
     <p><br>
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" > Artifact 1- updated version </a>
-    <br>
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" > Artifact 1- original version </a>
+    <H2>Artifact 1</H2>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" >updated version </a>
+     | 
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" >original version </a>
     <br><br>
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> Artifact 2- updated version</a>
-    <br>
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> Artifact 2- original version</a>
+    <H2>Artifact 2</H2>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
+     | 
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
     <br><br><br></p>
   </div>
 </div>
