--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
   }
   .dividerDiv{
     background-color: 008080;
-    height: 25px;
+    height: 20px;
+    padding: 10px;
     display: flex;
+    width: 100%;
   }
   .headerTxtDiv{
     background-color: #72c4d4;
