--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <script>
   
   function openPopup(){
-    <!--var artifactCodeToHtml = File.ReadAllText(@"https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c");-->
+    var artifactCodeToHtml  = "12345";<!-- = File.ReadAllText(@"https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c");-->
     let newWindow = window.open("", "Test Popup", "width=800,height=1000");
     newWindow.document.write("<h1>artifactCodeToHtml</h1>");
   }
