--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
   .headerDiv{
     display: flex;
-    background-color: #87cefa;
+    background-color: #f0ffff;
     align-items: center;
     justify-content: center;
     padding: 20px;;
@@ -13,28 +13,28 @@
   }
   .bodyDiv{
     display:flex;
-    background-color: #fffff0;
+    background-color: #ffffff;
     text-align: left;
     padding: 20px;
     height: 1600px;
     width: 100%;
   }
   .dividerDiv{
-    background-color: #6495ed;
+    background-color: #faebd7;
     height: 10px;
     padding: 5px;
     display: flex;
     width: 100%;
   }
   .headerTxtDiv{
-    background-color: #87cefa;
+    background-color: #f0ffff;
     text-align: center;
     padding: 20px;;
     height: 70px;
     width: 1500px;
   }
   .bodyTxtDiv{
-    background-color: #fffff0;
+    background-color: #ffffff;
     text-align: left;
     padding: 30px;
     height: 1200px;
