--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
   .headerDiv{
     display: flex;
-    background-color: #f0f8ff;
+    background-color: #4682b4;
     align-items: center;
     justify-content: center;
     padding: 20px;;
@@ -20,14 +20,14 @@
     width: 100%;
   }
   .dividerDiv{
-    background-color: #f2f3f4;
+    background-color: #fdff00;
     height: 10px;
     padding: 5px;
     display: flex;
     width: 100%;
   }
   .headerTxtDiv{
-    background-color: #f0f8ff;
+    background-color: #4682b4;
     text-align: center;
     padding: 20px;;
     height: 70px;
