--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
   function openPopup(){
     var artifactCodeToHtml  = "12345";<!-- = File.ReadAllText(@"https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c");-->
     let newWindow = window.open("", "Test Popup", "width=800,height=1000");
-    newWindow.document.write("<h1>artifactCodeToHtml</h1>");
+    newWindow.document.write(artifactCodeToHtml);
   }
 </script>
