--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   }
   .bodyDiv{
     display:flex;
-    background-color: #faebd7;
+    background-color: #a6e7ff;
     text-align: left;
     padding: 20px;
     height: 1600px;
@@ -34,7 +34,7 @@
     width: 1500px;
   }
   .bodyTxtDiv{
-    background-color: #faebd7;
+    background-color: #a6e7ff;
     text-align: left;
     padding: 30px;
     height: 1200px;
