--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   
   function openPopup(){
     var artifactCodeToHtml = File.ReadAllText(@"https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c");
-    let newWindow = window.open("", "Test Popup", "width=800,height=1000");
+    let newWindow = window.open("", "Test Popup", "width=100%,height=100%");
     newWindow.document.write(artifactCodeToHtml);
   }
 </script>
