--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
 <script>
   
   function openPopup(){
-    var artifactCodeToHtml = File.ReadAllText(@"https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c");
+    using HttpClient client0 = new HttpClient();
+    string artifact1Code = await client0.GetStringAsync("https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c");
+    string artifact1HtmlStr = HttpUtility.HtmlEncode(artifact1Code);
+    
     let newWindow = window.open("", "Test Popup", "width=100%,height=100%");
-    newWindow.document.write(artifactCodeToHtml);
+    newWindow.document.write(artifact1CodeToHtml);
   }
 </script>
