--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
     string artifact1HtmlStr = HttpUtility.HtmlEncode(artifact1Code);
     
     let newWindow = window.open("", "Test Popup", "width=100%,height=100%");
-    newWindow.document.write(artifact1CodeToHtml);
+    newWindow.document.write(artifact1HtmlStr);
   }
 </script>
