--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <!--Test button to open popup window populated by artifact orig/updated code ..? -->
 <button onclick="openPopup()"> Test open popup </button>
-<p>artifact1Code</p>
+
 
 <script>
   
@@ -80,10 +80,10 @@
     using System.Net.Http;
     using System.Web;
     using HttpClient client0 = new HttpClient();
-    string artifact1Code = await client0.GetStringAsync("https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c");
-    string artifact1HtmlStr = HttpUtility.HtmlEncode(artifact1Code);
+    string artifact1Code = client0.GetStringAsync("https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c").Result;
+    <!-- string artifact1HtmlStr = HttpUtility.HtmlEncode(artifact1Code); -->
     
     let newWindow = window.open("", "Test Popup", "width=100%,height=100%");
-    newWindow.document.write("<pre><code>@artifact1HtmlStr</code></pre>");
+    newWindow.document.write(artifact1Code);
   }
 </script>
