--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     using HttpClient client0 = new HttpClient();
     string artifact1Code = client0.GetStringAsync("https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c").Result;
     <!-- string artifact1HtmlStr = HttpUtility.HtmlEncode(artifact1Code); -->
-    
+    Console.WriteLine(artifact1Code);
+      
     let newWindow = window.open("", "Test Popup", "width=100%,height=100%");
     newWindow.document.write(artifact1Code);
   }
