--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     using System.Net.Http;
     using System.Web;
     using HttpClient client0 = new HttpClient();
-    string artifact1Code = client0.GetStringAsync("https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c").Result;
+    string artifact1Code = await client0.GetStringAsync("https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c").Result;
     <!-- string artifact1HtmlStr = HttpUtility.HtmlEncode(artifact1Code); -->
     Console.WriteLine(artifact1Code);
       
