--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
     if(artifact1Code.IsSuccessStatusCode){
         var artifact1CodeStr = await artifact1Code.Content.ReadAsStringAsync();
     }
-      
+
+    let newWindow = window.open("", "Test Popup", "width=100%,height=100%");
+    newWindow.document.write(artifact1CodeStr);  
 
   }
 </script>
