--- a/index.html
+++ b/index.html
@@ -72,10 +72,25 @@
 
 <!--Test button to open popup window populated by artifact orig/updated code ..? -->
 <button onclick="openPopup()"> Test open popup </button>
-
+<button id="FetchArtifact1">Artifact1 </button>
+<pre id="outputArtifact1"></pre>
 
 <script>
-  
+    document.getElementById('fetchFile').addEventListener('click', async function() {
+      const url = 'https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c'; // Replace with your file URL
+      try {
+        const response = await fetch(url);
+        const text = await response.text();
+        const lines = text.split('\n');
+        document.getElementById('outputArtifact1').textContent = lines.join('\n');
+      } catch (error) {
+        console.error('Error fetching file:', error);
+      }
+    });
+  </script>
+
+<script>
+
   function openPopup(){
     using System.Net.Http;
     using System.Web;
