--- a/Artifact1.html
+++ b/Artifact1.html
@@ -1,1 +1,30 @@
-<div
+<html>
+<style>
+  .headerDiv{
+    display: flex;
+    background-color: #343434;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    height: 90px;
+    width: 100%;
+  }
+  .bodyDiv{
+    display: flex;
+    background-color: #121212;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    height: 1000px;
+    width: 100%
+  }
+</style>
+
+<body>
+  <div class= "headerDiv">
+    <H2>Software Design & Engineering Artifact (Artifact 1)</H2>
+  </div>
+  <div class= "bodyDiv">
+  </div>
+</body>
+</html>
