--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <button onclick="openPopup()"> Test open popup </button>
 <button id="FetchArtifact1">Artifact1 </button>
 <pre id="outputArtifact1"></pre>
+<a href= "Artifact1.html"> Artifact1 page link </a>
 
 <script>
     document.getElementById('fetchFile').addEventListener('click', async function() {
