--- a/Artifact1.html
+++ b/Artifact1.html
@@ -2,7 +2,7 @@
 <style>
   .headerDiv{
     display: flex;
-    background-color: #9ee2f6;
+    background-color: #ee0e0e;
     align-items: center;
     justify-content: center;
     padding: 10px;
@@ -11,7 +11,7 @@
   }
   .bodyDiv{
     display: flex;
-    background-color: #ffefd3;
+    background-color: #e8e8e8;
     align-items: center;
     justify-content: center;
     padding: 20px;
