--- a/Artifact1.html
+++ b/Artifact1.html
@@ -22,7 +22,7 @@
 
 <body>
   <div class= "headerDiv">
-    <H2>Software Design & Engineering Artifact (Artifact 1)</H2>
+    <H2>Software Design & Engineering Artifact (Artifact 1)&nbsp;&nbsp;</H2>
   </div>
   <div class= "bodyDiv">
     <H2>Artifact 1 files</H2>
