--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 </div>
 <div class="dividerDiv">
-  
+  <H2><a href= "Artifact1.html"> Artifact1 page link </a></H2>
 </div>
 <div class= "bodyDiv">
   <div class= "bodyTxtDiv">
@@ -70,7 +70,7 @@
 <button onclick="openPopup()"> Test open popup </button>
 <button id="FetchArtifact1">Artifact1 </button>
 <pre id="outputArtifact1"></pre>
-<a href= "Artifact1.html"> Artifact1 page link </a>
+
 
 <script>
     document.getElementById('fetchFile').addEventListener('click', async function() {
