--- a/index.html
+++ b/index.html
@@ -51,16 +51,12 @@
 </div>
 <div class="dividerDiv">
   <H2><a href= "Artifact1.html"> Artifact1 page link </a></H2>
+  <H2><a href= "Artifact2.html"> Artifact2 page link </a></H2>
 </div>
 <div class= "bodyDiv">
   <div class= "bodyTxtDiv">
     <p><br>
-    <br>
-    <H2>Artifact 2</H2>
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
-     | 
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
-    <br><br><br></p>
+    <br><br></p>
   </div>
 </div>
 </body>
