--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     height: 50px;
     padding: 5px;
     display: flex;
+    justify-content: center;
     width: 100%;
   }
   .headerTxtDiv{
@@ -50,13 +51,13 @@
   </div>
 </div>
 <div class="dividerDiv">
-  <H2><a href= "Artifact1.html"> Artifact1 page link </a></H2>
-  <H2><a href= "Artifact2.html"> Artifact2 page link </a></H2>
+  <H2><a href= "Artifact1.html"> Artifact1 page link </a> 
+    &#09;
+  <a href= "Artifact2.html"> Artifact2 page link </a></H2>
 </div>
 <div class= "bodyDiv">
   <div class= "bodyTxtDiv">
-    <p><br>
-    <br><br></p>
+
   </div>
 </div>
 </body>
