--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 <div class="dividerDiv">
   <H2><a href= "Artifact1.html"> Artifact1 page link </a> 
-    &#09;&#09;&#09; | &#09;&#09;&#09;
+    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
   <a href= "Artifact2.html"> Artifact2 page link </a></H2>
 </div>
 <div class= "bodyDiv">
