--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 <div class="dividerDiv">
   <H2><a href= "Artifact1.html"> Artifact1 page link </a> 
     &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
-  <a href= "Artifact2.html"> Artifact2 page link </a></H2>
+  <a href= "Artifact2.html"> Artifact2 page link </a>
+    &emsp;&emsp;&emsp; | &emsp;&emsp;&emsp;
+  <a href= "Artifact3.html"> Artifact3 page link </a>
+  </H2>
 </div>
 <div class= "bodyDiv">
   <div class= "bodyTxtDiv">
