--- a/Artifact3.html
+++ b/Artifact3.html
@@ -27,9 +27,9 @@
   <div class= "bodyDiv">
    <br>
     <H2>Artifact 3</H2>
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/DashboardArtifact3Updated.ipynb"> updated version</a>
      | 
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/DashboardArtifact3Original.ipynb"> original version</a>
     <br>
   </div>
 </body>
