--- a/Artifact1.html
+++ b/Artifact1.html
@@ -25,9 +25,9 @@
     <H2>Software Design & Engineering Artifact (Artifact 1)&nbsp;&nbsp;</H2>
   </div>
   <div class= "bodyDiv">
-    <H2>Artifact 1 files</H2>
+    <H2>Artifact 1 files&emsp;</H2>
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" >updated version </a>
-     | 
+     &ensp;|&ensp; 
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" >original version </a>
     <br>
   </div>
