--- a/Artifact1.html
+++ b/Artifact1.html
@@ -12,8 +12,8 @@
   .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
-    align-items: center;
-    justify-content: center;
+    align-items: top;
+    justify-content: left;
     padding: 20px;
     height: 1000px;
     width: 100%
