--- a/Artifact1.html
+++ b/Artifact1.html
@@ -15,8 +15,8 @@
     align-items: top;
     justify-content: left;
     padding: 20px;
-    height: 1000px;
-    width: 100%
+    height: 100%;
+    width: 100%;
   }
 </style>
 
