--- a/Artifact2.html
+++ b/Artifact2.html
@@ -12,11 +12,11 @@
   .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
-    align-items: center;
-    justify-content: center;
+    align-items: top;
+    justify-content: left;
     padding: 20px;
-    height: 1000px;
-    width: 100%
+    height: 100%;
+    width: 100%;
   }
 </style>
 
@@ -26,10 +26,10 @@
   </div>
   <div class= "bodyDiv">
    <br>
-    <H2>Artifact 2</H2>
+    <H2>Artifact 2&emsp;
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
-     | 
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
+     &ensp;|&ensp; 
+    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a></H2>
     <br>
   </div>
 </body>
