--- a/Artifact2.html
+++ b/Artifact2.html
@@ -26,7 +26,7 @@
   </div>
   <div class= "bodyDiv">
    <br>
-    <H2>Artifact 2&emsp;
+    <H2>Artifact 2 repository files&emsp;
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
      &ensp;|&ensp; 
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a></H2>
