--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     padding: 5px;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
   }
   .headerTxtDiv{
