--- a/Artifact1.html
+++ b/Artifact1.html
@@ -13,7 +13,7 @@
     display: flex;
     background-color: #e8e8e8;
     align-items: top;
-    justify-content: left;
+    text-align: left;
     padding: 20px;
     height: 100%;
     width: 100%;
