--- a/Artifact1.html
+++ b/Artifact1.html
@@ -29,8 +29,8 @@
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" >updated version </a>
      &ensp;|&ensp; 
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" >original version </a></H2>
-    <br><br><br><br>
-    <H3>Original code</H3>
+    <br><br>
+    <H3><br><br>Original code</H3>
     <p><br><br>/*<br>
  *  ======== gpiointerrupt.c ========<br>
  */<br>
