--- a/Artifact1.html
+++ b/Artifact1.html
@@ -22,11 +22,15 @@
     justify-content: center;
     display: flex;
     background-color: #e8e8e8;
+    height: 100%;
+    width: 100%;
   }
   .origDiv{
     justify-content: left;
     display: flex;
     background-color: #e8e8e8;
+    height: 100%;
+    width: 50%;
   }
 </style>
 
