--- a/Artifact1.html
+++ b/Artifact1.html
@@ -49,7 +49,7 @@
 
   <div class= "codeDiv">
     <div class= "origDiv">
-      <H3><br><br>Original code</H3>
+      <H3><br><br>Original code<br><br></H3>
       <p><br><br>/*<br>
          *  ======== gpiointerrupt.c ========<br>
          */<br>
