--- a/Artifact1.html
+++ b/Artifact1.html
@@ -36,17 +36,19 @@
   }
   .origDiv{
     justify-content: left;
+    align-items: center;
     display: flex;
     background-color: #e8e8e8;
     height: 100%;
-    width: 50%;
+    width: 500px;
   }
   .updatDiv{
     justify-content: right;
+    align-items: center;
     display: flex;
     background-color: #e8e8e8;
     height: 100%;
-    width: 50%;
+    width: 500px;
   }
 </style>
 
