--- a/Artifact1.html
+++ b/Artifact1.html
@@ -31,6 +31,7 @@
     justify-content: center;
     display: flex;
     background-color: #e8e8e8;
+    padding: 20px;
     height: 100%;
     width: 100%;
   }
