--- a/Artifact1.html
+++ b/Artifact1.html
@@ -36,7 +36,7 @@
     width: 100%;
   }
   .origDiv{
-    justify-content: left;
+    text-align: left;
     align-items: center;
     display: flex;
     background-color: #e8e8e8;
@@ -44,7 +44,7 @@
     width: 500px;
   }
   .updatDiv{
-    justify-content: right;
+    text-align: right;
     align-items: center;
     display: flex;
     background-color: #e8e8e8;
