--- a/Artifact2.html
+++ b/Artifact2.html
@@ -18,6 +18,24 @@
     height: 100%;
     width: 100%;
   }
+    .linksDiv{
+    display: flex;
+    background-color: #e8e8e8;
+    
+    text-align: left;
+    padding: 20px;
+    height: 100;
+    width: 100%;
+  }
+  .narrativeDiv{
+    text-align: left;
+    align-items: center
+    display: flex;
+    background-color: #e8e8e8;
+    padding: 20px;
+    height: 100%;
+    width: 100%;
+  }
 </style>
 
 <body>
@@ -25,12 +43,42 @@
     <H2>Algorithms & Data Structures Artifact (Artifact 2)&nbsp;&nbsp;</H2>
   </div>
   <div class= "bodyDiv">
-   <br>
-    <H2>Artifact 2 repository files&emsp;
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
-     &ensp;|&ensp; 
-    <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a></H2>
-    <br>
+    <div class="linksDiv>
+      <H2>Artifact 2 repository files&emsp;
+      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
+         &ensp;|&ensp; 
+      <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a></H2>
+      <br><br>
+    </div>
+    <div class= "narrativeDiv>
+      <p>
+          &emsp;In Category Two: Algorithms and Data Structure, I have chosen to update the user input<br>
+          security features for the Data Structure and Algorithms- Analysis and Design final project. This<br>
+          project was originally developed in April 2023 as a Binary Search Tree access program where<br>
+          the user will load a local .dat or .txt file with course object data and then the user may search<br>
+          for a specific course object as well as list all course objects loaded into the Binary Search Tree.<br>
+          This software package was selected since it shares an excellent example of data structures and<br>
+          algorithms along with opportunities to implement improvements to input security; The improvements that<br>
+          I’ve included in the updated software package are buffer overflow security for main menu selection input<br>
+          and course object search input. The final project of Data Structure and Algorithms- Analysis and Design<br>
+          allows for two opportunities to improve user input security for Category Two: Algorithms and Data Structure.
+      </p>
+      <p>
+          &emsp;This series of updates met the anticipated course outcomes and presented a great learning<br>
+          opportunity. In this artifact’s updates, course outcomes #2, #4, and #5 are satisfied since the<br>
+          program’s comments have been updated to allow for a clear understanding of the programs operations,<br>
+          the implementation of updates was non-disruptive to the existing system along with robust and concise,<br>
+          and these updated focused upon buffer overflow control structures to help mitigate security flaws in the<br>
+          original software. Throughout the implementation process I was required to consider the expected<br>
+          algorithmic behaviors and functional limitations of the C++ language; further the design for these security<br>
+          algorithms needed to allow the software to examine each individual char input by the user through the<br>
+          keyboard to ensure that corrupt data will not be passed to the menu’s switch statement or the Binary Search<br>
+          Tree’s print/search course function. This assignment presented an excellent learning experience, and the<br>
+          anticipated course outcomes were fulfilled by the updates to this artifact.
+      </p>
+
+    </div>
+    
   </div>
 </body>
 </html>
