--- a/Artifact2.html
+++ b/Artifact2.html
@@ -12,8 +12,8 @@
   .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
-    align-items: top;
-    justify-content: left;
+
+    text-align: left;
     padding: 20px;
     height: 100%;
     width: 100%;
