--- a/Artifact2.html
+++ b/Artifact2.html
@@ -18,7 +18,7 @@
     height: 100%;
     width: 100%;
   }
-    .linksDiv{
+  .linksDiv{
     display: flex;
     background-color: #e8e8e8;
     
@@ -29,7 +29,7 @@
   }
   .narrativeDiv{
     text-align: left;
-    align-items: center
+    align-items: center;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
