--- a/Artifact1.html
+++ b/Artifact1.html
@@ -29,7 +29,7 @@
   }
   .narrativeDiv{
     text-align: left;
-    align-items: center;
+    align-items: normal;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
