--- a/Artifact2.html
+++ b/Artifact2.html
@@ -12,7 +12,7 @@
   .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
-
+    align-items: start
     text-align: left;
     padding: 20px;
     height: 100%;
