--- a/Artifact3.html
+++ b/Artifact3.html
@@ -18,6 +18,24 @@
     height: 100%;
     width: 100%;
   }
+  .linksDiv{
+    display: flex;
+    background-color: #e8e8e8;
+    
+    text-align: left;
+    padding: 20px;
+    height: 100;
+    width: 100%;
+  }
+  .narrativeDiv{
+    text-align: left;
+    align-items: normal;
+    display: flex;
+    background-color: #e8e8e8;
+    padding: 20px;
+    height: 100%;
+    width: 100%;
+  }
 </style>
 
 <body>
@@ -25,12 +43,48 @@
     <H2>Databases (Artifact 3)</H2>
   </div>
   <div class= "bodyDiv">
-   <br>
+    <div class="linksDiv">
     <H2>Artifact 3 repository files&emsp;
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/DashboardArtifact3Updated.ipynb"> updated version</a>
      &ensp;|&ensp; 
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/DashboardArtifact3Original.ipynb"> original version</a></H2>
-    <br>
+    <br><br>
+    </div>
+
+    <div class="narrativeDiv">
+        <p>
+            &emsp;For the databases artifact, I have chosen the final project from Client-Server<br>
+            Development that was originally engineered in February of 2024. This software package<br>
+            was designed as a lightweight interface between a client program and a MongoDB database<br>
+            hosted on a server that allowed users to perform statistical analysis on large numbers<br>
+            of animals located across the globe. When originally implementing this program a CRUD<br>
+            (Create, Read, Update, and Delete) database interface was programmed but never fully<br>
+            integrated into the client program’s interface software and so this presented an excellent<br>
+            opportunity to finish the development of the UX for inclusion of database object creation,<br>
+            existing animal information updates, and removal of existing animal records from the database.<br>
+            Further, the updates to this program required the implementation of button GUIs, on click<br>
+            routines for popup window activation, and button activation routines for data submission to the<br>
+            record creation, record update, and record removal database functions. In February 2024 I<br>
+            originally engineered the final project of Client-Server Development that will serve as my<br>
+            databases artifact.         
+        </p>
+        <p>
+            &emsp;This round of updates has been a strong reminder of front-end development principles<br>
+            and as anticipated has satisfied course outcomes #3, and #4. During my integration of database<br>
+            object creation, record update, and record deletion interfaces I was not presented with strong<br>
+            opportunities to apply course outcome #5 as originally anticipated, i.e. develop and apply a data<br>
+            security mindset though course outcomes #3, and #4 were met through the design and implementation<br>
+            of these new features. I was reminded heavily of the relationship between programming for front-end<br>
+            structures, i.e. buttons and popup windows, and front-end events, i.e. button activation and<br>
+            spawning new windows, in this series of updates. The greatest challenge presented during the<br>
+            implementation of these new features was differentiating the record variables to allow users to enter<br>
+            for new animal records and allow users to change for updating existing animal records; though the most<br>
+            technically cumbersome task was determining how to generate popup windows that could acquire user input<br>
+            to transfer to the relevant database functions. Course outcomes #3 and #4 were satisfied by the patches<br>
+            to this artifact that reminded me of the intricacies of front-end development.
+        </p>
+
+    </div>
   </div>
 </body>
 </html>
