--- a/Artifact3.html
+++ b/Artifact3.html
@@ -21,7 +21,7 @@
   .linksDiv{
     display: flex;
     background-color: #e8e8e8;
-    
+    position: absolute;
     text-align: left;
     padding: 20px;
     height: 100;
@@ -30,6 +30,7 @@
   .narrativeDiv{
     text-align: left;
     align-items: normal;
+    position: absolute;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
