--- a/Artifact3.html
+++ b/Artifact3.html
@@ -22,6 +22,7 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
+    z-index: 1;
     text-align: left;
     padding: 20px;
     height: 100;
@@ -31,6 +32,7 @@
     text-align: left;
     align-items: normal;
     position: absolute;
+    z-index: 2;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
