--- a/Artifact3.html
+++ b/Artifact3.html
@@ -22,17 +22,17 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     text-align: left;
     padding: 20px;
-    height: 100;
+    height: 100px;
     width: 100%;
   }
   .narrativeDiv{
     text-align: left;
     align-items: normal;
     position: absolute;
-    z-index: 2;
+    z-index: 1;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
