--- a/Artifact3.html
+++ b/Artifact3.html
@@ -22,6 +22,7 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
+    top: 100px;
     z-index: 2;
     text-align: left;
     padding: 20px;
@@ -32,6 +33,7 @@
     text-align: left;
     align-items: normal;
     position: absolute;
+    top: 0;
     z-index: 1;
     display: flex;
     background-color: #e8e8e8;
