--- a/Artifact3.html
+++ b/Artifact3.html
@@ -71,9 +71,8 @@
             routines for popup window activation, and button activation routines for data submission to the<br>
             record creation, record update, and record removal database functions. In February 2024 I<br>
             originally engineered the final project of Client-Server Development that will serve as my<br>
-            databases artifact.         
-        </p>
-        <p>
+            databases artifact.<br>         
+
             &emsp;This round of updates has been a strong reminder of front-end development principles<br>
             and as anticipated has satisfied course outcomes #3, and #4. During my integration of database<br>
             object creation, record update, and record deletion interfaces I was not presented with strong<br>
