--- a/Artifact3.html
+++ b/Artifact3.html
@@ -22,7 +22,7 @@
     display: flex;
     background-color: #e8e8e8;
     position: absolute;
-    top: 110px;
+    top: 130px;
     z-index: 2;
     text-align: left;
     padding: 20px;
@@ -71,7 +71,7 @@
             routines for popup window activation, and button activation routines for data submission to the<br>
             record creation, record update, and record removal database functions. In February 2024 I<br>
             originally engineered the final project of Client-Server Development that will serve as my<br>
-            databases artifact.<br>         
+            databases artifact.<br><br>         
 
             &emsp;This round of updates has been a strong reminder of front-end development principles<br>
             and as anticipated has satisfied course outcomes #3, and #4. During my integration of database<br>
