--- a/Artifact1.html
+++ b/Artifact1.html
@@ -12,8 +12,8 @@
   .bodyDiv{
     display: flex;
     background-color: #e8e8e8;
-    align-items: start;
-    text-align: left;
+    align-items: top;
+    justify-content: left;
     padding: 20px;
     height: 100%;
     width: 100%;
@@ -21,15 +21,20 @@
   .linksDiv{
     display: flex;
     background-color: #e8e8e8;
-    
+    position: absolute;
+    top: 130px;
+    z-index: 2;
     text-align: left;
     padding: 20px;
-    height: 100;
+    height: 100px;
     width: 100%;
   }
   .narrativeDiv{
     text-align: left;
     align-items: normal;
+    position: absolute;
+    top: 250;
+    z-index: 1;
     display: flex;
     background-color: #e8e8e8;
     padding: 20px;
@@ -65,9 +70,8 @@
           based upon a comparison with the temperature reading from the board’s integrated thermopile.<br>
           The final project of Emerging System Architecture originally included exclusively heating thermostat<br>
           components though it has been improved with a cooling mode algorithm in this update for Enhancement<br>
-          One: Software Design and Engineering of the Computer Science Capstone.
-        </p>
-        <p>
+          One: Software Design and Engineering of the Computer Science Capstone.<br><br>
+        
           &emsp;The inclusion of this Embedded Systems artifact to my ePortfolio shares my competency in engineering<br>
           for restrictive environments. This artifact showcases an appreciation for device activity timing, and<br>
           embedded system development practices; in the updated version of this software, the code has been<br>
@@ -80,9 +84,8 @@
           without consideration for presenting to peers, coordinating updates with peers, or improving upon the<br>
           security of the existing software. This software package displays competency in restrictive hardware<br>
           environments making this program a perfect addition to my ePortfolio as an example of my Software Design<br>
-          and Engineering skillset.
-        </p>
-        <p>
+          and Engineering skillset.<br><br>
+
           &emsp;Throughout the process of integrating the cooling mode update to the Emerging System Architecture<br>
           artifact, I have been reminded of the importance of programming best practices. When initially developing<br>
           this program in June 2024, I recall, learning how the CC3220S board’s thermopile stores temperature readings<br>
@@ -97,9 +100,6 @@
         </p>
     </div>
   </div>
-
-
-  
   
 </body>
 </html>
